Implemented load config

--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -1,13 +1,36 @@
 env {
+  # base address of the nexus deployment
   endpoint = "http://localhost:8080/v1"
-  token    = none
+  # the token to use "value" or "none" for no token
+  token = "none"
 }
 
-data {
-  resource-distribution = exponential
-  minimum-count = 120000000 // 120 million
+load {
+  # number of concurrent connections to use when loading data
+  concurrency = 10
+  # max number of resources to be sent for creation within the same request
+  batch = 100
+  # whether to request the system to validate the resources for creation / update
+  validate = false
+  # the data configuration
+  data {
+    # supported distributions are: "flat", "linear" and "exponential"
+    # - a flat distribution implies an equal arrangement of resources in projects
+    # - a linear distribution implies an equal arrangement of resources in projects
+    distribution = "exponential"
+    # number of resources to load; in the case of an "exponential" distribution the last project is truncated to meet
+    # the value defined
+    resources = 1200000
+    # number of projects to create; the value is ignored for an "exponential" distribution as the number of projects
+    # depends on the required resource count
+    projects = 20
+    # one of the edges of the interval in terms of resource count for linear distribution; the number of resources for
+    # each project is computed based on the "resources" value, number of "projects" and this seed
+    seed = 200
+  }
 }
 
 test {
+  # the targeted test simulation duration
   duration = 20 minutes
 }
