Gatling integration, test config, initial read sim

--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -3,6 +3,8 @@ env {
   endpoint = "http://localhost:8080/v1"
   # the token to use "value" or "none" for no token
   token = "none"
+  # the organization to be used when loading data and running tests
+  org = "bench"
 }
 
 load {
@@ -32,5 +34,9 @@ load {
 
 test {
   # the targeted test simulation duration
-  duration = 20 minutes
+  duration = 5 seconds
+  # number of logical threads to be used in tests
+  users = 1
+  # target project to be used for tests
+  project = "project27"
 }
