--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -39,4 +39,6 @@ test {
   users = 1
   # target project to be used for tests
   project = "project27"
+  # the maximum resource index to be used for read requests
+  max-resource-index = 10000000
 }
