Added additional simulations

--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -37,7 +37,7 @@ test {
   duration = 5 seconds
   # number of logical threads to be used in tests
   users = 1
-  # target project to be used for tests
+  # target project to be used for tests; project27, xresolver, inresolver, fat
   project = "project27"
   # the maximum resource index to be used for read requests
   max-resource-index = 10000000
