Removed batching during load of data

--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -1,17 +1,17 @@
 env {
   # base address of the nexus deployment
-  endpoint = "http://localhost:8080/v1"
+  endpoint = "http://localhost/delta/v1"
   # the token to use "value" or "none" for no token
   token = "none"
   # the organization to be used when loading data and running tests
   org = "bench"
+  # optional additional endpoints to use for consuming the service
+  alternate-endpoints = []
 }
 
 load {
   # number of concurrent connections to use when loading data
   concurrency = 10
-  # max number of resources to be sent for creation within the same request
-  batch = 50
   # whether to request the system to validate the resources for creation / update
   validate = false
   # the data configuration
