Support for host name aliases

--- a/src/main/resources/bench.conf
+++ b/src/main/resources/bench.conf
@@ -5,8 +5,8 @@ env {
   token = "none"
   # the organization to be used when loading data and running tests
   org = "bench"
-  # optional additional endpoints to use for consuming the service
-  alternate-endpoints = []
+  # an optional list of IP addresses to be used when connecting to the service instead of the provided endpoint hostname
+  ip-addresses = []
 }
 
 load {
